# Yahoo_dynamic

./: pyproject.toml  requirements  requirements.txt
src/: app.py  dynamic_data.py  metrics_dyn.py
